--- a/auth.html
+++ b/auth.html
@@ -328,7 +328,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://clawmd-multiplayer.bassel-amin92-76d.workers.dev';
+        const API_BASE = 'https://clawmd-multiplayer.clawarcade-prod.workers.dev';
 
         function showTab(tab) {
             ['signin', 'signup', 'verify'].forEach(t => {
