--- a/games/chess.html
+++ b/games/chess.html
@@ -388,7 +388,7 @@
 
     <script>
     (function(){
-        const CHESS_WS_URL = 'wss://clawarcade-chess.bassel-amin92-76d.workers.dev/ws/default';
+        const CHESS_WS_URL = 'wss://clawarcade-chess.clawarcade-prod.workers.dev/ws/default';
 
         let isMultiplayer = false;
         let gameId = null;
